--- a/src/components/Roulette/styles.module.scss
+++ b/src/components/Roulette/styles.module.scss
@@ -3,37 +3,36 @@
   display: flex;
   justify-content: center;
   padding: 50px 0;
-}
 
-.display {
-  width: 1000px;
-  height: 300px;
-  background-color: #46414191;
-  position: relative;
-  overflow: hidden;
-}
+  .display {
+    width: 1000px;
+    height: 100px;
+    background-color: #46414191;
+    position: relative;
+    overflow: hidden;
 
-.screen {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  border: 2px solid #c9c9c9;
-}
+    .screen {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      border: 2px solid #c9c9c9;
+    }
 
-.divider {
-  position: absolute;
-  left: 50%;
-  bottom: 0;
-  width: 0;
-  height: 0;
-  border-left: 25px solid transparent;
-  border-right: 25px solid transparent;
-  border-bottom: 50px solid crimson;
-}
+    .pointer {
+      position: absolute;
+      left: 50%;
+      bottom: 0;
+      width: 0;
+      height: 0;
+      border-left: 15px solid transparent;
+      border-right: 15px solid transparent;
+      border-bottom: 20px solid crimson;
+    }
 
-.roller {
-  display: flex;
-  gap: 10px;
-  margin: 20px 0;
-  transition: margin-left 10s cubic-bezier(0.23, 0.78, 0.29, 1);
+    .roller {
+      display: flex;
+      column-gap: 10px;
+      margin-top: 20px;
+    }
+  }
 }
