Fixed animation and refactor

--- a/src/components/PopupItem/styles.module.scss
+++ b/src/components/PopupItem/styles.module.scss
@@ -14,7 +14,8 @@
     height: 300px;
     display: flex;
     flex-direction: column;
-    border: #000 solid 4px;
+    border: #000000 solid 4px;
+    border-radius: 6px;
 
     .preview,
     .action {
