--- a/src/components/Roulette/styles.module.scss
+++ b/src/components/Roulette/styles.module.scss
@@ -26,7 +26,7 @@
       height: 0;
       border-left: 15px solid transparent;
       border-right: 15px solid transparent;
-      border-bottom: 20px solid crimson;
+      border-bottom: 50px solid rgb(238, 93, 122);
     }
 
     .roller {
